Squshed bug, scrolling went too high on navbar clicks

--- a/css/style.scss
+++ b/css/style.scss
@@ -30,12 +30,16 @@ $shadow-c: #909090;
   -webkit-align-items: $aiv;
 }
 
-body {
-
-}
-
 .row {
   margin: 0px 0px;
+}
+
+.anchor {
+  //yoho yoho bootstrap fucks this up
+  display: block; 
+  position: relative; 
+  top: -50px;
+  visibility: hidden;
 }
 
 // Navbar styling
